--- a/config.org
+++ b/config.org
@@ -114,7 +114,7 @@
   #+begin_src elisp
   (use-package vterm
       :ensure t)
-  (setq shell-file-name "/bin/zsh" ;; this will be different for linux and mac machines
+  (setq shell-file-name "/bin/bash" ;; this will be different for linux and mac machines
       vterm-max-scrollback 5000)
   #+end_src
 
@@ -194,6 +194,7 @@
 
 - using lsp-deferred so that only when a buffer is open, this should make startup faster and emacs a bit more performant (i hope)
 - I will only be using the LSP with certain languages, for most languages I will try to refrain from using a language server purely to force myself to be a bit more precise while programming
+- to add and remove folders use 'C-l -> C-l -> F'
   #+begin_src elisp
   (use-package lsp-haskell :ensure t)
   (use-package lsp-mode
@@ -299,6 +300,25 @@
      :prefix "SPC")
   ,#+end_src
   
+*** Python
+- uses lsp-pyright with the open source pyright server. Using this because it can be used with nvim /emacs.
+- the settings of which can be found [[https://emacs-lsp.github.io/lsp-pyright/][here]]. 
+
+#+begin_src elisp
+(use-package lsp-pyright
+  :ensure t
+  :hook (python-mode . (lambda ()
+                          (require 'lsp-pyright)
+                          (lsp-deferred))))
+#+end_src 
+
+- considering using [[https://github.com/emacsmirror/python-mode][python-mode]] which would allow for the use of Ipython for python shells 
+- also thinking of [[https://github.com/jorgenschaefer/elpy][elpy]] for a complete ide feel.
+    - uses company mode
+    - can use ipython
+    - uses the following packages
+      | python3-jedi | black | python3-autopep8 | yapf3 | python3-yapf |
+
 *** Scheme(s)
 
 #+begin_src elisp
@@ -336,30 +356,30 @@
 - adding generic color theme
 
   #+begin_src elisp
-  ;; basic theme that is on every installation
-  ;; (load-theme 'wombat t)
-  ;; using a nice imported theme
+;; basic theme that is on every installation
+;; (load-theme 'wombat t)
+;; using a nice imported theme
   #+end_src
 
 - theme for use with mac os (I theme mac os with Gruvbox)
   
   #+begin_src elisp
-  (use-package gruvbox-theme :ensure t)
-  (load-theme 'gruvbox-dark-soft t)
+;; (use-package gruvbox-theme :ensure t)
+;; (load-theme 'gruvbox-dark-soft t)
   #+end_src
 
 - theme for use with linux (currently using a nord theme)
   
   #+begin_src elisp
-  ;;(use-package nord-theme :ensure t)
-  ;;(load-theme 'nord t)
+;; (use-package nord-theme :ensure t)
+;; (load-theme 'nord t)
   #+end_src
 
 - a nice dracula theme for tiling window manager setup
   
   #+begin_src elisp
-  ;;(use-package dracula-theme :ensure t)
-  ;;(load-theme 'dracula t)
+;; (use-package dracula-theme :ensure t)
+;; (load-theme 'dracula t)
   #+end_src
 
 *** Font's
@@ -369,7 +389,7 @@
 
   #+begin_src elisp
   (use-package all-the-icons :ensure t)
-  (set-face-attribute 'default nil :font "Fira Code 14")
+  (set-face-attribute 'default nil :font "Fira Code 12")
   #+end_src
 
 *** Errors & warnings 
