--- a/config.org
+++ b/config.org
@@ -126,36 +126,6 @@
 
 ** File Browser
 
-- for the file browser I want something very minimal much like nerdtree in vim. Icons would be nice but are not necessary. Ranger seems to be the best fit for what I want. It is minimal (no icons and seems very fast) and it uses the vim keybindings so it plays very nicely with evil mode.
-- rebinding the keys will make it a bit easier on the hands 
-
-  | key-binding | function                                        |
-  |-------------+-------------------------------------------------|
-  | SPC-d       | from any mode this will summon ranger           |
-  | q           | from a ranger buffer this will close the buffer |
-  | //          | search                                          |
-  | RET         | open file                                       |
-  | l           | go left / open file                             |
-  | h           | go right / back in directory tree               |
-  | j           | go down                                         |
-  | k           | go up                                           |
-  | C-h         | show hidden directories / files                 |
-  | ws          | exit and open selected file in horizontal split |
-  | wv          | exit and open selected file in vertical split   |
-
-  ,#+begin_src elisp
-  (use-package ranger
-    :ensure t)
-  (setq ranger-cleanup-eagerly t)
-  (setq ranger-excluded-extensions '("mkv" "iso" "mp4"))
-  ;; set up a default binding 
-  (general-define-key
-   :states '(normal)
-   :keymaps 'override
-   :prefix "SPC"
-   "d" '(ranger :which-key "open ranger"))
-  ,#+end_src
-
 - testing ztree with some "vimified" keybindings to help with file navigation. The main draw of ztree is its simplicity and that it is 100% elisp.
   #+begin_src elisp
   (use-package ztree :ensure t)
@@ -206,6 +176,7 @@
     (lua-mode . lsp-deferred)
     :commands (lsp lsp-deferred)
     :config
+    (setq lsp-semantic-tokens-honor-refresh-requests nil)
     (define-key lsp-mode-map (kbd "C-l C-l") lsp-command-map))
   #+end_src
 - also using lsp-ui to give more of an IDE feel to emacs
@@ -355,7 +326,7 @@
   #+begin_src elisp
   (menu-bar-mode 0)
   (tool-bar-mode 0)
-  ;(scroll-bar-mode -1)
+  (scroll-bar-mode -1)
   (setq inhibit-splash-screen t)
   (setq make-backup-files nil) 
   (setq auto-save-default nil)
